# Navgator

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/navgator-core/: Cargo.toml
crates/navgator-core/src/: lib.rs
crates/navgator-issues/: Cargo.toml
crates/navgator-issues/src/: main.rs
crates/navgator-navigate/: Cargo.toml
crates/navgator-navigate/src/: compositor.rs  content.rs  git.rs  main.rs  model.rs  results.rs  search.rs  ui.rs
docs/: improvements.md
docs/specs/: git-worktree-preview-tabs.md  provider-compositor-architecture.md
scripts/: update_language_tags.py  update_org_tags.py
src/: commands.rs  config.rs  content.rs  git.rs  main.rs  metadata.rs  model.rs  navigate.rs  preview.rs  results.rs  search.rs  tags.rs  ui.rs
